- Refactor logging - Change to use dotenv - Add /version api
